# voicenotes

./: .gitignore  CMakeLists.txt  Makefile  Package.resolved  Package.swift  fetch_tiny_model.sh
.github/workflows/: swift.yml
Assets/: test.m4a
Libraries/TranscriptionService/: Package.swift
Libraries/TranscriptionService/Sources/TranscriptionService/: TranscriptionService.swift
Libraries/TranscriptionService/Tests/Resources/: note.m4a
Plist/: Info.plist
Sources/: AppDelegate.swift  AudioRecorder.swift  TranscriptionService.swift  main.swift
Sources/ProgressView/: ProgressView.swift  ProgressViewModel.swift
Sources/TranscriptionService/: TestTranscribers.swift  Transcriber.swift  TranscriptionService.swift
Sources/VoiceNotesApp/: AppDelegate.swift  AudioRecorder.swift  GlobalHotkeyListener.swift  PromptWindowController.swift  main.swift
Tests/TranscriptionService/: TestTranscribers.swift  TranscriberServiceTest.swift  TranscriberTest.swift
